tests/ui/parser/errors/close_delimeter2.sol
struct X {
    //~v ERROR: expected one of `;` or `}`, found `<eof>`
    uint y